added html content and css styles for exercise details

--- a/index.html
+++ b/index.html
@@ -97,6 +97,40 @@
       </div>
     </div>
 
+    <!-- Modal for Exercise Details -->
+    <div id="exerciseModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 id="modalTitle">Exercise Title</h2>
+          <button class="close-btn" id="closeModal">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="modal-section">
+            <h3><i class="fa-solid fa-tag"></i> Type</h3>
+            <p id="modalType">-</p>
+          </div>
+          <div class="modal-section">
+            <h3><i class="fa-solid fa-heart-pulse"></i> Muscle</h3>
+            <p id="modalMuscle">-</p>
+          </div>
+          <div class="modal-section">
+            <h3><i class="fa-solid fa-dumbbell"></i> Equipment</h3>
+            <p id="modalEquipment">-</p>
+          </div>
+          <div class="modal-section">
+            <h3><i class="fa-solid fa-signal"></i> Difficulty</h3>
+            <p id="modalDifficulty">-</p>
+          </div>
+          <div class="modal-section">
+            <h3><i class="fa-solid fa-clipboard-list"></i> Instructions</h3>
+            <p id="modalInstructions">-</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- JavaScript -->
     <script src="script.js"></script>
   </body>
