deleted script.js and updated html to work js modules

--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script type="module" src="script/main.js"></script>
   </body>
 </html>
